--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^2.1.7",
+    "ant-design-vue": "^4.2.3",
+    "bootstrap": "^5.3.3",
+    "pinia": "^2.2.2",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
